--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <nav>
         <a href="index.html" class="active">Home</a>
         <a href="Memories.html">Memories</a>
+        <a href="UpcomingEvents.html">Upcoming Events</a>
         <a href="AboutUs.html">About Us</a>
     </nav>
     <div class="container">
