--- a/UpcomingEvents.html
+++ b/UpcomingEvents.html
@@ -17,7 +17,10 @@
         <a href="UpcomingEvents.html" class="active">Upcoming Events</a>
         <a href="AboutUs.html">About Us</a>
     </nav>
-    <p align="center"><iframe src="https://calendar.google.com/calendar/embed?height=500&wkst=1&ctz=Asia%2FKolkata&bgcolor=%23ffffff&showTz=0&showTabs=0&title=UpcomingEvents&src=ZGV2ZWxvcGVyc2t2cEBnbWFpbC5jb20&color=%23039BE5" width=500 height="500"></iframe></p>
+    <div class="container">
+        <div class="content-box contact-details">
+            <p align="center"><iframe src="https://calendar.google.com/calendar/embed?height=500&wkst=1&ctz=Asia%2FKolkata&bgcolor=%23ffffff&showTz=0&showTabs=0&title=UpcomingEvents&src=ZGV2ZWxvcGVyc2t2cEBnbWFpbC5jb20&color=%23039BE5" width=350 height="350"></iframe></p>        </div>
+    </div>
     <footer>
         © 2024 DevelopersKvp
     </footer>
