--- a/AboutUs.html
+++ b/AboutUs.html
@@ -15,6 +15,7 @@
         <a href="index.html">Home</a>
         <a href="Memories.html">Memories</a>
         <a href="UpcomingEvents.html">Upcoming Events</a>
+        <a href="Donation.html">Donation</a>
         <a href="AboutUs.html" class="active">About Us</a>
     </nav>
     <div class="container">
@@ -30,11 +31,7 @@
                 The temple is a hub of cultural and spiritual activities, hosting numerous festivals and events that capture the essence of our rich traditions and vibrant community spirit. From the grand celebrations of Narasimha Jayanti to the serene rituals of Lakshmi Puja, each event is a testament to our devotion and unity.
             </p>
         </div>
-        <div class="content-box qr-code">
-            <h2>Donation</h2>
-            <p>Your generous donations help us maintain the temple and organize various cultural and spiritual activities. Scan the QR code below to make a donation:</p>
-            <img src="qr_code_image.png" alt="QR Code for Donations">
-        </div>
+        
         <div class="content-box contact-details">
             <h2>Contact Us</h2>
             <p>For more information, please reach out to us:</p>
@@ -42,7 +39,7 @@
             <p><strong>Phone:</strong> +91 12345 67890</p>
             <p><strong>Email:</strong> developerskvp@gmail.com</p>
             <p><strong>Location:</strong></p>
-            <p align="center"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20149.98724015434!2d77.83586416329443!3d9.184582434063836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b06b33c7af65983%3A0xa935272b87223ab9!2sSri%20LakshmiNarasimar%20Temple%20thirumal%20nagar!5e0!3m2!1sen!2sin!4v1724514194095!5m2!1sen!2sin" width=200 height="200"></iframe></p>
+            <p align="center"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20149.98724015434!2d77.83586416329443!3d9.184582434063836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b06b33c7af65983%3A0xa935272b87223ab9!2sSri%20LakshmiNarasimar%20Temple%20thirumal%20nagar!5e0!3m2!1sen!2sin!4v1724514194095!5m2!1sen!2sin"></iframe></p>
         </div>
     </div>
     <footer>
