--- a/Memories.html
+++ b/Memories.html
@@ -68,6 +68,7 @@
         <a href="index.html">Home</a>
         <a href="Memories.html" class="active">Memories</a>
         <a href="UpcomingEvents.html">Upcoming Events</a>
+        <a href="Donation.html">Donation</a>
         <a href="AboutUs.html">About Us</a>
     </nav>
     <div class="container">
