--- a/Donation.html
+++ b/Donation.html
@@ -35,7 +35,7 @@
             <p>Account Number: 1234567890</p>
             <p>IFSC Code: ABCD0123456</p>
             <p>Bank Name: Example Bank</p>
-            <button href="upi://pay?pa=6381237542@ptsbi&pn=Thulasidharan&cu=INR" id="__UPI_BUTTON__">CLICK TO PAY</button>
+            <button href="upi://pay?pa=6381237542@ptsbi&pn=Thulasidharan&cu=INR" id="upiButton">CLICK TO PAY</button>
         </div>
     </div>
 
