--- a/Donation.html
+++ b/Donation.html
@@ -35,7 +35,7 @@
             <p>Account Number: 1234567890</p>
             <p>IFSC Code: ABCD0123456</p>
             <p>Bank Name: Example Bank</p>
-            <button href="upi://pay?pa=6381237542@ptsbi&pn=Thulasidharan&cu=INR" id="upiButton">CLICK TO PAY</button>
+            <button href="upi://pay/?pa=visheshk27@ybl&pn=VISHESH%20KHATRI&cu=INR" id="upiButton">CLICK TO PAY</button>
         </div>
     </div>
 
@@ -63,14 +63,6 @@
             donationDetails.style.display = "none";
             donationSection.style.display = "block";
         }
-                // Function to handle UPI button click
-        function openUPIApp() {
-            const upiLink = document.getElementById('upiButton').getAttribute('href');
-            window.location.href = upiLink;
-        }
-
-        // Attach the function to the button click event
-        document.getElementById('upiButton').addEventListener('click', openUPIApp);
     </script>
     <footer>
         © 2024 DevelopersKvp
