--- a/Donation.html
+++ b/Donation.html
@@ -35,7 +35,7 @@
             <p>Account Number: 1234567890</p>
             <p>IFSC Code: ABCD0123456</p>
             <p>Bank Name: Example Bank</p>
-            <button href="upi://pay/?pa=visheshk27@ybl&pn=VISHESH%20KHATRI&cu=INR" id="upiButton">CLICK TO PAY</button>
+            <button onclick="openUPIApp()">CLICK TO PAY</button>
         </div>
     </div>
 
@@ -62,6 +62,10 @@
         backButton.onclick = function() {
             donationDetails.style.display = "none";
             donationSection.style.display = "block";
+        }
+        function openUPIApp() {
+            const upiLink = "upi://pay?pa=6381237542@ptsbi&pn=Thulasidharan&cu=INR";
+            window.location.href = upiLink;
         }
     </script>
     <footer>
