--- a/AboutUs.html
+++ b/AboutUs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sri LakshmiNarasimar Temple</title>
+    <title>Sri Lakshmi Narasimar Temple</title>
     <link rel="icon" type="image/png" href="Title.png">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -14,7 +14,7 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="Memories.html">Memories</a>
-        <a href="UpcomingEvents.html">Upcoming Events</a>
+        <a href="UpcomingEvents.html">Events</a>
         <a href="Donation.html">Donation</a>
         <a href="AboutUs.html" class="active">About Us</a>
     </nav>
@@ -38,8 +38,7 @@
             <p><strong>Address:</strong> Sri LakshmiNarasimar Temple, ThirumaalNagar, Kovilpatti, Tamil Nadu, India</p>
             <p><strong>Phone:</strong> +91 12345 67890</p>
             <p><strong>Email:</strong> developerskvp@gmail.com</p>
-            <p><strong>Location:</strong></p>
-            <p align="center"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20149.98724015434!2d77.83586416329443!3d9.184582434063836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b06b33c7af65983%3A0xa935272b87223ab9!2sSri%20LakshmiNarasimar%20Temple%20thirumal%20nagar!5e0!3m2!1sen!2sin!4v1724514194095!5m2!1sen!2sin"></iframe></p>
+            <p align="center"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7877.427899858738!2d77.83153598258664!3d9.180255023956617!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b06b33c7af65983%3A0xa935272b87223ab9!2sSri%20LakshmiNarasimar%20Temple%20thirumal%20nagar!5e0!3m2!1sen!2sin!4v1724906267461!5m2!1sen!2sin" loading="fast" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
         </div>
     </div>
     <footer>
