--- a/Memories.html
+++ b/Memories.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sri LakshmiNarasimar Temple</title>
+    <title>Sri Lakshmi Narasimar Temple</title>
     <link rel="icon" type="image/png" href="Title.png">
     <link rel="stylesheet" href="styles.css">
     <script src="https://apis.google.com/js/api.js"></script>
@@ -67,7 +67,7 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="Memories.html" class="active">Memories</a>
-        <a href="UpcomingEvents.html">Upcoming Events</a>
+        <a href="UpcomingEvents.html">Events</a>
         <a href="Donation.html">Donation</a>
         <a href="AboutUs.html">About Us</a>
     </nav>
