--- a/Donation.html
+++ b/Donation.html
@@ -14,7 +14,7 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="Memories.html">Memories</a>
-        <a href="UpcomingEvents.html">Upcoming Events</a>
+        <a href="UpcomingEvents.html">Events</a>
         <a href="Donation.html" class="active">Donation</a>
         <a href="AboutUs.html">About Us</a>
     </nav>
