--- a/UpcomingEvents.html
+++ b/UpcomingEvents.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sri LakshmiNarasimar Temple</title>
+    <title>Sri Lakshmi Narasimar Temple</title>
     <link rel="icon" type="png" href="Title.png">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -14,14 +14,14 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="Memories.html">Memories</a>
-        <a href="UpcomingEvents.html" class="active">Upcoming Events</a>
+        <a href="UpcomingEvents.html" class="active">Events</a>
         <a href="Donation.html">Donation</a>
         <a href="AboutUs.html">About Us</a>
     </nav>
     <div class="container">
-        <div class="content-box contact-details">
-            <p align="center"><iframe src="https://calendar.google.com/calendar/embed?height=500&wkst=1&ctz=Asia%2FKolkata&bgcolor=%23ffffff&showTz=0&showTabs=0&title=UpcomingEvents&src=ZGV2ZWxvcGVyc2t2cEBnbWFpbC5jb20&color=%23039BE5"></iframe></p>
-        </div>
+        <div class="content-box">
+        <p align="center"><iframe src="https://calendar.google.com/calendar/embed?height=500&wkst=1&ctz=Asia%2FKolkata&bgcolor=%23ffffff&showTz=0&showTabs=0&title=UpcomingEvents&src=ZGV2ZWxvcGVyc2t2cEBnbWFpbC5jb20&color=%23039BE5" loading="fast"></iframe></p>
+    </div>
     </div>
     <footer>
         © 2024 DevelopersKvp
