--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sri LakshmiNarasimar Temple</title>
+    <title>Sri Lakshmi Narasimar Temple</title>
     <link rel="icon" type="png" href="Title.png">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -14,7 +14,7 @@
     <nav>
         <a href="index.html" class="active">Home</a>
         <a href="Memories.html">Memories</a>
-        <a href="UpcomingEvents.html">Upcoming Events</a>
+        <a href="UpcomingEvents.html">Events</a>
         <a href="Donation.html">Donation</a>
         <a href="AboutUs.html">About Us</a>
     </nav>
